--- a/client/src/components/layouts/PageContainer/PageContainer.module.css
+++ b/client/src/components/layouts/PageContainer/PageContainer.module.css
@@ -1,6 +1,6 @@
 .pageContainer {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   animation: fadeIn 0.3s ease;
