--- a/client/src/pages/auth/Auth.module.css
+++ b/client/src/pages/auth/Auth.module.css
@@ -579,6 +579,7 @@
 .authPageContainer {
   min-height: 100vh;
   display: flex;
+  overflow-y: auto;
   align-items: center;
   justify-content: center;
   padding: 40px 20px;
