--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -77,7 +77,7 @@
 
 html {
   font-size: 16px;
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -86,13 +86,13 @@ body {
   color: var(--text-color);
   line-height: 1.5;
   background-color: var(--background-color);
-  height: 100%;
+  min-height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 #root {
-  height: 100%;
+  min-height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
